# patience-sorting

./: .gitignore  CMakeLists.txt  constants.h  correct.txt  input.txt  main.c  main.h
src/: constants.h  file.c  file.h  helpers.c  helpers.h  input.c  input.h  main.c  main.h  page.c  page.h  record.c  record.h  records.c  records.h  sorting.c  sorting.h  tape.c  tape.h
